--- a/src/app/core/layout/navbar/navbar.component.html
+++ b/src/app/core/layout/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   @if(!isMobile()){
     <div class="flex items-center bg-hazy-sky-900 text-great-blue-50 p-1 w-64">
       <div class="relative w-full h-full">
-        <img class="object-contain"
+        <img class="object-cover"
         ngSrc="https://dici.uta.cl/wp-content/uploads/2022/12/cropped-Logo-depto_2022_-removebg-preview-1-e1670958261826.png"
         fill priority
         alt="logo-dici"
