--- a/src/app/core/auth/pages/login/login.component.html
+++ b/src/app/core/auth/pages/login/login.component.html
@@ -1,1 +1,36 @@
-<p>login works!</p>
+
+<div class="h-screen py-20 px-32 flex">
+  <div class="h-full w-full flex items-center justify-center">
+    <div class="h-full w-full flex rounded-xl overflow-hidden shadow-lg">
+      <div class="bg-great-blue-900 h-full w-7/12 text-hazy-sky-50 p-10 xl:p-20 flex flex-col justify-center gap-10">
+        <div class="text-center">
+          <div class="text-3xl mb-2">Bievenido al Sistema de Laboratorio del</div>
+          <div class="text-4xl font-extrabold">Departamento en Computación e Informática</div>
+        </div>
+        <div class="h-24 w-full relative">
+          <img class="object-contain"
+          ngSrc="https://dici.uta.cl/wp-content/uploads/2022/12/cropped-Logo-depto_2022_-removebg-preview-1-e1670958261826.png"
+          fill priority
+          alt="logo-dici"
+          >
+        </div>
+      </div>
+      <div class="h-full w-5/12 bg-white p-10 xl:p-20">
+        <h1 class="text-3xl font-bold mb-10 text-hazy-sky-900">Iniciar Sesión</h1>
+        <div class="flex flex-col gap-10 mb-10">
+          <div class="flex flex-col">
+            <label class="text-xl font-medium mb-1 text-hazy-sky-800" for="">Correo {{isMobile()}}</label>
+            <input class="outline-none border rounded-md p-2 border-hazy-sky-300" type="text" name="" id="">
+          </div>
+          <div class="flex flex-col">
+            <label class="text-xl font-medium mb-1 text-hazy-sky-800" for="">Contraseña</label>
+            <input class="outline-none border rounded-md p-2 border-hazy-sky-300" type="text" name="" id="">
+          </div>
+        </div>
+        <div class="flex justify-center w-full">
+          <button class="bg-hazy-sky-200 transition text-hazy-sky-900 font-bold p-4 rounded-xl w-full hover:bg-great-blue-100">Iniciar sesión</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
