--- a/src/app/features/prestamos/regular/pages/seleccionar-categoria/seleccionar-categoria.component.html
+++ b/src/app/features/prestamos/regular/pages/seleccionar-categoria/seleccionar-categoria.component.html
@@ -7,13 +7,12 @@
       <div class="mt-7 font-medium text-2xl">Cargando...</div>
     </div>
 }@else {
-  <div>
-    <div @fadeInDiagonal class="mb-5 text-hazy-sky-900">
-      <div>
-        <h1 class="text-2xl mb-4 font-semibold text-hazy-sky-800 ">Gestion de recursos</h1>
-      </div>
+  <div
+  @fadeInDiagonal >
+    <div  class="mb-5 text-hazy-sky-900">
+      <h1 class="text-2xl mb-4 font-semibold text-hazy-sky-800 ">Seleccione una categoria</h1>
     </div>
-    <div @fadeInDiagonal class="grid gap-4"
+    <div  class="grid gap-4"
     [class]="isMobile()? 'grid-cols-1 sm:grid-cols-2' : 'grid-cols-2 lg:grid-cols-2 xl:grid-cols-3 2xl:grid-cols-4'"
     >
       @for(categoria of categoriasState().categorias; track $index){
@@ -22,8 +21,8 @@
             <h2 class="flex items-center justify-center text-lg w-full font-semibold"> {{categoria.nombre_categoria}}</h2>
           </div>
           <div class="flex flex-col gap-2 w-1/3 ">
-            <button type="button" (click)="onPrestar()" class="p-2 font-medium text-lg bg-hazy-sky-200 text-hazy-sky-900 rounded-lg transition hover:bg-hazy-sky-100">Prestar</button>
-            <button type="button" (click)="onPrestar()" class="p-2 font-medium text-lg bg-hazy-sky-200 text-hazy-sky-900 rounded-lg transition hover:bg-hazy-sky-100">Devovler</button>
+            <button type="button" (click)="onPrestar(categoria.id_categoria)" class="p-2 font-medium text-lg bg-hazy-sky-200 text-hazy-sky-900 rounded-lg transition hover:bg-hazy-sky-100">Prestar</button>
+            <button type="button" (click)="onDevolver(categoria.id_categoria)" class="p-2 font-medium text-lg bg-hazy-sky-200 text-hazy-sky-900 rounded-lg transition hover:bg-hazy-sky-100">Devovler</button>
           </div>
         </div>
       }
