--- a/src/app/features/inventario/recursos/pages/gestion-recursos/gestion-recursos.component.html
+++ b/src/app/features/inventario/recursos/pages/gestion-recursos/gestion-recursos.component.html
@@ -29,6 +29,9 @@
                 Modelo
             </th>
             <th class="px-6 py-3">
+              nombre
+            </th>
+            <th class="px-6 py-3">
                 Marca
             </th>
             <th class="px-6 py-3">
@@ -55,10 +58,13 @@
                 {{recurso.modelo}}
               </td>
               <td class="px-6 py-4">
+                {{recurso.nombre}}
+              </td>
+              <td class="px-6 py-4">
                 {{recurso.marca}}
               </td>
               <td class="px-6 py-4">
-                <div class="flex w-80">
+                <div class="flex w-24">
                   {{recurso.descripcion}}
                 </div>
               </td>
