--- a/src/app/features/prestamos/regular/pages/confirmar-prestamo/confirmar-prestamo.component.html
+++ b/src/app/features/prestamos/regular/pages/confirmar-prestamo/confirmar-prestamo.component.html
@@ -1,48 +1,59 @@
-<div>
-  <h1 class="text-2xl mb-4 font-semibold text-hazy-sky-800 ">Confirmar prestamo</h1>
-</div>
-<div class="h-full w-full flex text-hazy-sky-100 gap-10 mb-7"
-[class]="isMobile()?'flex-col':'flex-row'">
-  <div class="bg-great-blue-900 w-full p-4 rounded-lg">
-    <div class="flex flex-col items-center">
-      <h2 class="text-3xl font-bold text-center mb-4">Recurso</h2>
-      <div class="p-5 text-xl flex flex-col gap-4">
-        <div>
-          <span class="font-semibold">id_dici:</span><span class="ml-3">123456</span>
+@if(loadingEstudiante() && loadingEstudiante()){
+  <app-spinner></app-spinner>
+}
+@else {
+  <div>
+    <h1 class="text-2xl mb-4 font-semibold text-hazy-sky-800 ">Confirmar prestamo</h1>
+  </div>
+  <div class="h-full w-full flex text-hazy-sky-100 gap-10 mb-7"
+  [class]="isMobile()?'flex-col':'flex-row'">
+    <div class="bg-great-blue-900 w-full p-4 rounded-lg">
+      <div class="flex flex-col items-center">
+        <h2 class="text-3xl font-bold text-center mb-4">Recurso</h2>
+        <div class="p-5 text-xl flex flex-col gap-4">
+          <div>
+            <span class="font-semibold">id_dici:</span><span class="ml-3">{{recurso()?.id_dici}}</span>
+          </div>
+          <div>
+            <span class="font-semibold">id_uta:</span><span class="ml-3">{{recurso()?.id_uta}}</span>
+          </div>
+          <div>
+            <span class="font-semibold">Nombre:</span><span class="ml-3">{{recurso()?.nombre}}</span>
+          </div>
+          <div>
+            <span class="font-semibold">Modelo:</span><span class="ml-3">{{recurso()?.modelo}}</span>
+          </div>
+          <div>
+            <span class="font-semibold">Ubicacion:</span><span class="ml-3">{{recurso()?.ubicacion}}</span>
+          </div>
         </div>
-        <div>
-          <span class="font-semibold">id_uta:</span><span class="ml-3">123456</span>
-        </div>
-        <div>
-          <span class="font-semibold">Modelo:</span><span class="ml-3">123456</span>
-        </div>
-        <div>
-          <span class="font-semibold">Marca:</span><span class="ml-3">123456</span>
-        </div>
-        <div>
-          <span class="font-semibold">Marca:</span><span class="ml-3">123456</span>
+      </div>
+    </div>
+    <div class="bg-great-blue-900 w-full p-4 rounded-lg">
+      <div class="flex flex-col items-center">
+        <h2 class="text-3xl font-bold text-center mb-4">Estudiante</h2>
+        <div class="p-5 text-xl flex flex-col gap-4">
+          <div>
+            <span class="font-semibold">Rut:</span><span class="ml-3">{{estudiante()?.rut}}</span>
+          </div>
+          <div>
+            <span class="font-semibold">Nombre:</span><span class="ml-3">{{estudiante()?.nombre}}</span>
+          </div>
+          <div>
+            <span class="font-semibold">Agno:</span><span class="ml-3">{{estudiante()?.ingreso}}</span>
+          </div>
+          <div>
+            <span class="font-semibold">Direccion:</span><span class="ml-3">{{estudiante()?.direccion}}</span>
+          </div>
+          <div>
+            <span class="font-semibold">Fono:</span><span class="ml-3">{{estudiante()?.fono}}</span>
+          </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="bg-great-blue-900 w-full p-4 rounded-lg">
-    <div class="flex flex-col items-center">
-      <h2 class="text-3xl font-bold text-center mb-4">Estudiante</h2>
-      <div class="p-5 text-xl flex flex-col gap-4">
-        <div>
-          <span class="font-semibold">Rut:</span><span class="ml-3">123456</span>
-        </div>
-        <div>
-          <span class="font-semibold">Nombre:</span><span class="ml-3">123456</span>
-        </div>
-        <div>
-          <span class="font-semibold">Agno:</span><span class="ml-3">123456</span>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="w-full flex justify-center gap-4">
-  <button class="text-3xl bg-hazy-sky-200 hover:bg-hazy-sky-100 transition text-hazy-sky-900 rounded-lg font-bold p-4">Cancelar</button>
-  <button class="text-3xl bg-hazy-sky-200 hover:bg-hazy-sky-100 transition text-hazy-sky-900 rounded-lg font-bold p-4">Confimar</button>
-</div>
+  <div class="w-full flex justify-center gap-4">
+    <button class="text-3xl bg-hazy-sky-200 hover:bg-hazy-sky-100 transition text-hazy-sky-900 rounded-lg font-bold p-4">Cancelar</button>
+    <button class="text-3xl bg-hazy-sky-200 hover:bg-hazy-sky-100 transition text-hazy-sky-900 rounded-lg font-bold p-4">Confimar</button>
+  </div>  
+}
