--- a/src/app/features/prestamos/regular/pages/seleccionar-recurso/seleccionar-recurso.component.html
+++ b/src/app/features/prestamos/regular/pages/seleccionar-recurso/seleccionar-recurso.component.html
@@ -57,7 +57,7 @@
                   </div>
                 </td>
                 <td class="px-6 w-1/5 whitespace-nowrap">
-                  <button (click)="onPrestar(recurso.id_uta)" class="p-2 font-medium bg-hazy-sky-200 text-hazy-sky-900 rounded-lg transition hover:bg-hazy-sky-100">
+                  <button (click)="onPrestar(recurso.id_dici)" class="p-2 font-medium bg-hazy-sky-200 text-hazy-sky-900 rounded-lg transition hover:bg-hazy-sky-100">
                     Prestar                           
                   </button>
                 </td>
