--- a/src/app/features/prestamos/regular/pages/confirmar-prestamo/confirmar-prestamo.component.html
+++ b/src/app/features/prestamos/regular/pages/confirmar-prestamo/confirmar-prestamo.component.html
@@ -54,6 +54,7 @@
   </div>
   <div class="w-full flex justify-center gap-4">
     <button class="text-3xl bg-hazy-sky-200 hover:bg-hazy-sky-100 transition text-hazy-sky-900 rounded-lg font-bold p-4">Cancelar</button>
-    <button class="text-3xl bg-hazy-sky-200 hover:bg-hazy-sky-100 transition text-hazy-sky-900 rounded-lg font-bold p-4">Confimar</button>
+    <button class="text-3xl bg-hazy-sky-200 hover:bg-hazy-sky-100 transition text-hazy-sky-900 rounded-lg font-bold p-4"
+    (click)="confirmarPrestamo()">Confimar</button>
   </div>  
 }
