--- a/src/app/features/usuarios/pages/crear-usuario/crear-usuario.component.html
+++ b/src/app/features/usuarios/pages/crear-usuario/crear-usuario.component.html
@@ -23,10 +23,10 @@
     <span class="text-red-600 text-sm mt-1" [class]="hasRequiredError('rut')? 'visible':'invisible'">Campo requerido.</span>
   </div>
   <div class="flex flex-col">
-    <label class="mb-2 font-medium">Categorias</label>
+    <label class="mb-2 font-medium">Rol</label>
     <select formControlName="rol" class="bg-blue-sky focus:outline-none border rounded-lg p-2.5"
     [class]="hasRequiredError('rol')? 'border-red-600':'border-hazy-sky-600'">
-      <option value=""  selected>Eligue una categoria</option>
+      <option value=""  selected>Seleccionar un Rol</option>
       @for(rol of roles; track $index){
         <option class="bg-blue-sky text-hazy-sky-800 " value="{{rol}}">{{rol}}</option>
       }
