Agregando devolucione e historial

--- a/src/app/core/layout/navbar/navbar.component.html
+++ b/src/app/core/layout/navbar/navbar.component.html
@@ -23,8 +23,8 @@
     <div class="relative" #menu>
       <button (click)="dropMenu()" class="flex flex-row items-center justify-center gap-3 ">
         <div class="flex flex-col">
-          <span class="font-semibold">Juan Carlos</span>
-          <span class="text-sm ">Ayudante</span>
+          <span class="font-semibold">Humberto Urrutia</span>
+          <span class="text-sm ">ADMIN</span>
         </div>
         <div class="">
           <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
