--- a/src/app/features/inventario/recursos/pages/gestion-recursos/gestion-recursos.component.html
+++ b/src/app/features/inventario/recursos/pages/gestion-recursos/gestion-recursos.component.html
@@ -26,6 +26,9 @@
                 Id DICI
             </th>
             <th class="px-6 py-3">
+              Id UTA
+          </th>
+            <th class="px-6 py-3">
                 Modelo
             </th>
             <th class="px-6 py-3">
@@ -53,6 +56,9 @@
               </td>
               <td class="px-6 py-4 font-medium ">
                 {{recurso.id_dici}}
+              </td>
+              <td class="px-6 py-4 font-medium ">
+                {{recurso.id_uta}}
               </td>
               <td class="px-6 py-4 ">
                 {{recurso.modelo}}
