--- a/src/app/features/inventario/recursos/pages/editar-recurso/editar-recurso.component.html
+++ b/src/app/features/inventario/recursos/pages/editar-recurso/editar-recurso.component.html
@@ -34,6 +34,12 @@
         <span class="text-red-600 text-sm mt-1" [class]="hasRequiredError('modelo')? 'visible':'invisible'">Campo requerido.</span>
       </div>
       <div class="flex flex-col">
+        <label class="mb-2 font-medium">Nombre</label>
+        <input formControlName="nombre" class="bg-blue-sky focus:outline-none border rounded-lg p-2"
+        [class]="hasRequiredError('nombre')? 'border-red-600':'border-hazy-sky-600'"/>
+        <span class="text-red-600 text-sm mt-1" [class]="hasRequiredError('nombre')? 'visible':'invisible'">Campo requerido.</span>
+      </div>
+      <div class="flex flex-col">
         <label class="mb-2 font-medium">Marca</label>
         <input formControlName="marca" class="bg-blue-sky focus:outline-none border rounded-lg p-2"
         [class]="hasRequiredError('marca')? 'border-red-600':'border-hazy-sky-600'"/>
