--- a/src/app/features/prestamos/regular/pages/seleccionar-categoria/seleccionar-categoria.component.html
+++ b/src/app/features/prestamos/regular/pages/seleccionar-categoria/seleccionar-categoria.component.html
@@ -16,9 +16,9 @@
     [class]="isMobile()? 'grid-cols-1 sm:grid-cols-2' : 'grid-cols-2 lg:grid-cols-2 xl:grid-cols-3 2xl:grid-cols-4'"
     >
       @for(categoria of categoriasState().categorias; track $index){
-        <div class="flex flex-row bg-white text-hazy-sky-950 p-4 rounded-lg shadow-lg">
+        <div class="flex flex-row bg-hazy-sky-900 text-hazy-sky-50 p-4 rounded-lg shadow-lg">
           <div class="flex flex-row w-2/3 ">
-            <h2 class="flex items-center justify-center text-lg w-full font-semibold"> {{categoria.nombre_categoria}}</h2>
+            <h2 class="flex items-center justify-center text-2xl w-full font-semibold"> {{categoria.nombre_categoria}}</h2>
           </div>
           <div class="flex flex-col gap-2 w-1/3 ">
             <button type="button" (click)="onPrestar(categoria.id_categoria)" class="p-2 font-medium text-lg bg-hazy-sky-200 text-hazy-sky-900 rounded-lg transition hover:bg-hazy-sky-100">Prestar</button>
