--- a/src/app/features/prestamos/seguimiento/pages/seguimiento-prestamos/seguimiento-prestamos.component.html
+++ b/src/app/features/prestamos/seguimiento/pages/seguimiento-prestamos/seguimiento-prestamos.component.html
@@ -2,7 +2,9 @@
   <app-spinner></app-spinner>
 }
 @else{
-  <div>
+  <div
+  @notLoading
+  >
     <div  class="mb-5 text-hazy-sky-900">
       <h1 class="text-2xl mb-4 font-semibold text-hazy-sky-800 ">Seguimiento de prestamos.</h1>
     </div>
