--- a/src/app/core/auth/pages/login/login.component.html
+++ b/src/app/core/auth/pages/login/login.component.html
@@ -18,17 +18,19 @@
       <div class="h-full w-5/12 bg-white p-10 xl:p-20">
         <h1 class="text-3xl font-bold mb-10 text-hazy-sky-900">Iniciar Sesión</h1>
         <div class="flex flex-col gap-10 mb-10">
-          <div class="flex flex-col">
-            <label class="text-xl font-medium mb-1 text-hazy-sky-800" for="">Correo {{isMobile()}}</label>
-            <input class="outline-none border rounded-md p-2 border-hazy-sky-300" type="text" name="" id="">
-          </div>
-          <div class="flex flex-col">
-            <label class="text-xl font-medium mb-1 text-hazy-sky-800" for="">Contraseña</label>
-            <input class="outline-none border rounded-md p-2 border-hazy-sky-300" type="text" name="" id="">
-          </div>
+          <form [formGroup]="loginForm" >
+            <div class="flex flex-col">
+              <label class="text-xl font-medium mb-1 text-hazy-sky-800" for="">Correo</label>
+              <input class="outline-none border rounded-md p-2 border-hazy-sky-300" formControlName="rut" type="text">
+            </div>
+            <div class="flex flex-col">
+              <label class="text-xl font-medium mb-1 text-hazy-sky-800" for="">Contraseña</label>
+              <input class="outline-none border rounded-md p-2 border-hazy-sky-300" formControlName="password" type="text" >
+            </div>
+          </form>
         </div>
         <div class="flex justify-center w-full">
-          <button class="bg-hazy-sky-200 transition text-hazy-sky-900 font-bold p-4 rounded-xl w-full hover:bg-great-blue-100">Iniciar sesión</button>
+          <button (click)="login()" class="bg-hazy-sky-200 transition text-hazy-sky-900 font-bold p-4 rounded-xl w-full hover:bg-great-blue-100">Iniciar sesión</button>
         </div>
       </div>
     </div>
