--- a/src/app/features/prestamos/regular/pages/confirmar-prestamo/confirmar-prestamo.component.html
+++ b/src/app/features/prestamos/regular/pages/confirmar-prestamo/confirmar-prestamo.component.html
@@ -40,10 +40,7 @@
             <span class="font-semibold">Nombre:</span><span class="ml-3">{{estudiante()?.nombre}}</span>
           </div>
           <div>
-            <span class="font-semibold">Agno:</span><span class="ml-3">{{estudiante()?.ingreso}}</span>
-          </div>
-          <div>
-            <span class="font-semibold">Direccion:</span><span class="ml-3">{{estudiante()?.direccion}}</span>
+            <span class="font-semibold">Año:</span><span class="ml-3">{{estudiante()?.ingreso}}</span>
           </div>
           <div>
             <span class="font-semibold">Fono:</span><span class="ml-3">{{estudiante()?.fono}}</span>
