--- a/src/app/features/estudiantes/pages/gestion-estudiantes/gestion-estudiantes.component.html
+++ b/src/app/features/estudiantes/pages/gestion-estudiantes/gestion-estudiantes.component.html
@@ -82,7 +82,11 @@
                 {{estudiante.correo}}
               </td>
               <td class="px-6 py-4">
-                {{estudiante.estado_estudiante}}
+                @if (estudiante.estado){
+                  <span class="bg-green-100 text-green-800 p-2 rounded-md">Activo</span>
+                }@else{
+                  <span class="bg-red-100 text-red-800 p-2 rounded-md">Inactivo</span>
+                }
               </td>
               <td class="px-6 w-1/5 whitespace-nowrap">
                 <button (click)="verEstudiante()" class="p-1 mr-2 hover:bg-hazy-sky-100 rounded-xl transition">
