--- a/src/app/features/prestamos/historial/pages/historial/historial.component.html
+++ b/src/app/features/prestamos/historial/pages/historial/historial.component.html
@@ -6,7 +6,32 @@
   @notLoading
   >
     <div  class="mb-5 text-hazy-sky-900">
-      <h1 class="text-2xl mb-4 font-semibold text-hazy-sky-800 ">Historial.</h1>
+      <h1 class="text-2xl mb-4 font-semibold text-hazy-sky-800 ">Historial</h1>
+    </div>
+    <div class="flex flex-row mb-4 w-full justify-between">
+      <div class="relative mt-1 flex gap-5">
+        <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none" >
+          <svg class="w-4 h-4 " aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
+          </svg>
+        </div>
+          <input 
+          class="bg-blue-sky text-hazy-sky-800 focus:outline-none border-2 border-hazy-sky-200 text-sm rounded-lg p-2 ps-10 focus:border-hazy-sky-700"
+          [ngClass]="{'w-80': !isMobile(), 'w-40': isMobile()}"
+          placeholder="Buscar por ID DICI o ID UTA" 
+          #searchQuery
+           (input)="onSearchUpdated(searchQuery.value)"
+          >
+            <mat-form-field appearance="outline"  [subscriptSizing]="'dynamic'" class="!bg-blue-sky !rounded-lg ">
+              <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
+                <input matStartDate formControlName="start" placeholder="Start date">
+                <input matEndDate formControlName="end" placeholder="End date">
+              </mat-date-range-input>
+              <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+              <mat-date-range-picker #picker></mat-date-range-picker>
+            </mat-form-field>
+      </div>
+      <button  class="bg-hazy-sky-200 p-3 px-5 rounded-md text-hazy-sky-950 font-medium hover:bg-great-blue-100 transition">Crear Recurso</button>
     </div>
     <div class="relative overflow-x-auto shadow-md rounded-md">
       <table class="w-full text-sm text-left">
