--- a/src/app/features/estudiantes/pages/gestion-estudiantes/gestion-estudiantes.component.html
+++ b/src/app/features/estudiantes/pages/gestion-estudiantes/gestion-estudiantes.component.html
@@ -7,13 +7,19 @@
   <div>
     <h1 class="text-2xl mb-4 font-semibold text-hazy-sky-800 ">Gestion de Estudiantes</h1>
   </div>
-  <div class="flex flex-row mb-4 w-full justify-between">
+  <div class="flex flex-wrap my-4 w-full justify-between">
     <div class="relative mt-1">
       <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none" >
         <svg class="w-4 h-4 " aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
         </svg>
       </div>
+        <input 
+        class="bg-blue-sky text-hazy-sky-800 focus:outline-none border-2 border-hazy-sky-200 text-sm rounded-lg p-2 ps-10 focus:border-hazy-sky-700"
+        [ngClass]="{'w-80': !isMobile(), 'w-40': isMobile()}"
+        placeholder="Buscar" 
+        #searchQuery
+        (input)="onSearchUpdated(searchQuery.value)">
     </div>
     <div>
       <button  (click)="fileInput.click()" class="text-hazy-sky-950 font-medium bg-green-100 p-2 px-3 me-2 rounded-md hover:bg-green-50 transition" type="button">
@@ -40,46 +46,46 @@
     <table class="w-full text-sm text-left">
         <thead class="text-sm uppercase">
           <tr class="bg-hazy-sky-900 text-hazy-sky-50">
-            <th class="p-4">
-              <div class="flex items-center">
-                <input id="checkbox-all-search" type="checkbox" class="w-4 h-4 text-hazy-sky-400 rounded focus:ring-hazy-sky-500 focus:ring-2">
-                <label for="checkbox-all-search" class="sr-only">checkbox</label>
-              </div>
-            </th>
             <th class="px-6 py-3">
                 RUT
             </th>
             <th class="px-6 py-3">
               Nombre
-          </th>
+            </th>
             <th class="px-6 py-3">
                 Correo
+            </th>
+            <th class="px-6 py-3">
+              Ingreso
+            </th>
+            <th class="px-6 py-3">
+              Teléfono
             </th>
             <th class="px-6 py-3">
               Estado
             </th>
             <th class="px-6 py-3">
-                Acciones
+              Acciones
             </th>
           </tr>
         </thead>
         <tbody>
           @for(estudiante of estudiantes(); track estudiante.rut){
-            <tr class=" border-t  border-hazy-sky-700 text-black">
-              <td class="w-4 p-4">
-                <div class="flex items-center">
-                  <input id="checkbox-all-search" type="checkbox" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-                  <label for="checkbox-all-search" class="sr-only">checkbox</label>
-                </div>
-              </td>
-              <td class="px-6 py-4 font-medium ">
+            <tr class=" border-t border-hazy-sky-700 text-black">
+              <td class="px-6 py-4 text-nowrap">
                 {{estudiante.rut}}
               </td>
-              <td class="px-6 py-4 font-medium ">
+              <td class="px-6 py-4 text-nowrap">
                 {{estudiante.nombre}}
               </td>
               <td class="px-6 py-4 ">
                 {{estudiante.correo}}
+              </td>
+              <td class="px-6 py-4">
+                {{estudiante.ingreso}}
+              </td>
+              <td class="px-6 py-4 ">
+                {{estudiante.fono}}
               </td>
               <td class="px-6 py-4">
                 @if (estudiante.estado){
