--- a/src/app/features/prestamos/regular/pages/confirmar-prestamo/confirmar-prestamo.component.html
+++ b/src/app/features/prestamos/regular/pages/confirmar-prestamo/confirmar-prestamo.component.html
@@ -50,7 +50,7 @@
     </div>
   </div>
   <div class="w-full flex justify-center gap-4">
-    <button class="text-3xl bg-hazy-sky-200 hover:bg-hazy-sky-100 transition text-hazy-sky-900 rounded-lg font-bold p-4">Cancelar</button>
+    <button (click)="cancelarPrestamo()" class="text-3xl bg-hazy-sky-200 hover:bg-hazy-sky-100 transition text-hazy-sky-900 rounded-lg font-bold p-4">Cancelar</button>
     <button class="text-3xl bg-hazy-sky-200 hover:bg-hazy-sky-100 transition text-hazy-sky-900 rounded-lg font-bold p-4"
     (click)="confirmarPrestamo()">Confimar</button>
   </div>  
