--- a/src/app/features/inventario/categorias/pages/gestion-categorias/gestion-categorias.component.html
+++ b/src/app/features/inventario/categorias/pages/gestion-categorias/gestion-categorias.component.html
@@ -9,20 +9,27 @@
       <h1 class="text-2xl mb-4 font-semibold text-hazy-sky-800 ">Gestion de categorias</h1>
     </div>
     <div class="flex flex-row mb-4 w-full justify-between">
-      <input class="bg-blue-sky max-w-44 text-hazy-sky-800 focus:outline-none border rounded-lg p-2 focus:border-hazy-sky-600"
-      placeholder="Buscar ">
+      <div class="relative mt-1 flex gap-5">
+        <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none" >
+          <svg class="w-4 h-4 " aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
+          </svg>
+        </div>
+          <input 
+          class="bg-blue-sky text-hazy-sky-800 focus:outline-none border-2 border-hazy-sky-200 text-sm rounded-lg p-2 ps-10 focus:border-hazy-sky-700"
+          [ngClass]="{'w-80': !isMobile(), 'w-40': isMobile()}"
+          placeholder="Buscar por Nombre" 
+          #searchQuery
+           (input)="onSearchUpdated(searchQuery.value)"
+          >
+  
+      </div>
       <button (click)="crearCategoria()" class="bg-hazy-sky-200 p-2 px-5 rounded-md text-hazy-sky-950 font-medium hover:bg-great-blue-100 transition">Crear Categoria</button>
     </div>
     <div class="relative overflow-x-auto shadow-md rounded-md">
       <table class="w-full text-sm text-left">
           <thead class="text-sm uppercase">
             <tr class="bg-hazy-sky-900 text-hazy-sky-50">
-              <th class="p-4">
-                <div class="flex items-center">
-                  <input id="checkbox-all-search" type="checkbox" class="w-4 h-4 text-hazy-sky-400 rounded focus:ring-hazy-sky-500 focus:ring-2">
-                  <label for="checkbox-all-search" class="sr-only">checkbox</label>
-                </div>
-              </th>
               <th class="px-6 py-3">
                   Id
               </th>
@@ -39,27 +46,15 @@
           </thead>
           <tbody>
             @for(categoria of categorias(); track categoria.id_categoria){
-              <tr class=" border-t  border-hazy-sky-700 text-black">
-                <td class="w-4 p-4">
-                  <div class="flex items-center">
-                    <input id="checkbox-all-search" type="checkbox" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-                    <label for="checkbox-all-search" class="sr-only">checkbox</label>
-                  </div>
-                </td>
+              <tr class=" border-t  border-hazy-sky-700 text-black odd:bg-hazy-sky-50 even:bg-hazy-sky-100">
                 <td class="px-6 py-4 font-medium w-0">{{categoria.id_categoria}}</td>
                 <td class="px-6 py-4 ">
                   {{categoria.nombre_categoria}}
                 </td>
                 <td class="px-6 py-4">
-                  {{categoria.fecha_creacion | date: 'dd/MM/yyyy HH:mm:ss'}}
+                  {{categoria.fecha_creacion | date: 'dd/MM/yyyy HH:mm:ss' :"+0000"}}
                 </td>
                 <td class="px-6 w-1/5 whitespace-nowrap">
-                  <button (click)="editarRecurso()" class="p-1 mr-2 hover:bg-hazy-sky-100 rounded-xl transition">
-                    <svg class="w-6 h-6 text-hazy-sky-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                      <path stroke="currentColor" stroke-width="2" d="M21 12c0 1.2-4.03 6-9 6s-9-4.8-9-6c0-1.2 4.03-6 9-6s9 4.8 9 6Z"/>
-                      <path stroke="currentColor" stroke-width="2" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"/>
-                    </svg>                              
-                  </button>
                   <button (click)="editarCategoria(categoria.id_categoria)" class="p-1 mr-2 hover:bg-yellow-100 rounded-xl transition">
                     <svg class="w-6 h-6 text-yellow-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                       <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m14.304 4.844 2.852 2.852M7 7H4a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h11a1 1 0 0 0 1-1v-4.5m2.409-9.91a2.017 2.017 0 0 1 0 2.853l-6.844 6.844L8 14l.713-3.565 6.844-6.844a2.015 2.015 0 0 1 2.852 0Z"/>
