--- a/src/app/features/inventario/recursos/pages/gestion-recursos/gestion-recursos.component.html
+++ b/src/app/features/inventario/recursos/pages/gestion-recursos/gestion-recursos.component.html
@@ -17,7 +17,7 @@
         <input 
         class="bg-blue-sky text-hazy-sky-800 focus:outline-none border-2 border-hazy-sky-200 text-sm rounded-lg p-2 ps-10 focus:border-hazy-sky-700"
         [ngClass]="{'w-80': !isMobile(), 'w-40': isMobile()}"
-        placeholder="Buscar por ID DICI o ID UTA" 
+        placeholder="Buscar por ID DICI" 
         #searchQuery
          (input)="onSearchUpdated(searchQuery.value)"
         >
@@ -51,7 +51,7 @@
         </thead>
         <tbody>
           @for(recurso of recursos(); track recurso.id_dici){
-            <tr class=" border-t  border-hazy-sky-700 text-black">
+            <tr class=" border-t  border-hazy-sky-700 text-black odd:bg-hazy-sky-50 even:bg-hazy-sky-100">
               <td class="px-6 py-4 font-medium ">
                 {{recurso.id_dici}}
               </td>
@@ -68,7 +68,7 @@
                 {{recurso.categoria.nombre_categoria}}
               </td>
               <td class="px-6 w-1/5 whitespace-nowrap">
-                <button (click)="verRecurso()" class="p-1 mr-2 hover:bg-hazy-sky-100 rounded-xl transition">
+                <button (click)="verRecurso(recurso.id_dici)" class="p-1 mr-2 hover:bg-hazy-sky-100 rounded-xl transition">
                   <svg class="w-6 h-6 text-hazy-sky-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                     <path stroke="currentColor" stroke-width="2" d="M21 12c0 1.2-4.03 6-9 6s-9-4.8-9-6c0-1.2 4.03-6 9-6s9 4.8 9 6Z"/>
                     <path stroke="currentColor" stroke-width="2" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"/>
@@ -115,7 +115,6 @@
       <button href="#"
       (click)="onPageChange(currentPage() + 1)"
       class="flex items-center justify-center px-3 h-8 leading-tight hover:bg-great-blue-700 text-hazy-sky-50 bg-purple-heart-900 border border-hazy-sky-400 rounded-e-lg">
-        <span class="sr-only">Next</span>
         <svg class="w-2.5 h-2.5 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
         </svg>
