--- a/src/app/features/prestamos/historial/pages/historial/historial.component.html
+++ b/src/app/features/prestamos/historial/pages/historial/historial.component.html
@@ -18,31 +18,16 @@
           <input 
           class="bg-blue-sky text-hazy-sky-800 focus:outline-none border-2 border-hazy-sky-200 text-sm rounded-lg p-2 ps-10 focus:border-hazy-sky-700"
           [ngClass]="{'w-80': !isMobile(), 'w-40': isMobile()}"
-          placeholder="Buscar por ID DICI o ID UTA" 
+          placeholder="Buscar" 
           #searchQuery
            (input)="onSearchUpdated(searchQuery.value)"
           >
-            <mat-form-field appearance="outline"  [subscriptSizing]="'dynamic'" class="!bg-blue-sky !rounded-lg ">
-              <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
-                <input matStartDate formControlName="start" placeholder="Start date">
-                <input matEndDate formControlName="end" placeholder="End date">
-              </mat-date-range-input>
-              <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-              <mat-date-range-picker #picker></mat-date-range-picker>
-            </mat-form-field>
       </div>
-      <button  class="bg-hazy-sky-200 p-3 px-5 rounded-md text-hazy-sky-950 font-medium hover:bg-great-blue-100 transition">Crear Recurso</button>
     </div>
     <div class="relative overflow-x-auto shadow-md rounded-md">
       <table class="w-full text-sm text-left">
           <thead class="text-sm uppercase">
             <tr class="bg-hazy-sky-900 text-hazy-sky-50">
-              <th class="p-4">
-                <div class="flex items-center">
-                  <input id="checkbox-all-search" type="checkbox" class="w-4 h-4 text-hazy-sky-400 rounded focus:ring-hazy-sky-500 focus:ring-2">
-                  <label for="checkbox-all-search" class="sr-only">checkbox</label>
-                </div>
-              </th>
               <th class="px-6 py-3">
                   Id DICI
               </th>
@@ -61,14 +46,8 @@
             </tr>
           </thead>
           <tbody>
-            @for(prestamosRegular of prestamosRegular(); track prestamosRegular.id_dici){
-              <tr class=" border-t  border-hazy-sky-700 text-black">
-                <td class="w-4 p-4">
-                  <div class="flex items-center">
-                    <input id="checkbox-all-search" type="checkbox" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-                    <label for="checkbox-all-search" class="sr-only">checkbox</label>
-                  </div>
-                </td>
+            @for(prestamosRegular of prestamosRegular(); track prestamosRegular.id_prestamo){
+              <tr class=" border-t  border-hazy-sky-700 text-black odd:bg-hazy-sky-50 even:bg-hazy-sky-100">
                 <td class="px-6 py-4 font-medium ">
                   {{prestamosRegular.id_dici}}
                 </td>
@@ -89,5 +68,38 @@
           </tbody>
       </table>
     </div>
+    <nav class="mt-3 flex items-end justify-center">
+      <ul class="flex items-center -space-x-px h-8 ">
+        <li>
+          <button href="#"
+          (click)="onPageChange(currentPage() - 1)"
+           class="flex items-center justify-center px-3 h-8 ms-0 leading-tight hover:bg-great-blue-700 text-hazy-sky-50 bg-hazy-sky-900 border border-e-0 border-gray-300 rounded-s-lg hover:bg-gray-100">
+            <span class="sr-only">Previous</span>
+            <svg class="w-2.5 h-2.5 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 1 1 5l4 4"/>
+            </svg>
+          </button>
+        </li>
+        @for(page of totalPages; track $index) {
+          <li>
+            <button 
+            (click)="onPageChange(page)"
+            class="flex items-center justify-center px-3 h-8 hover:bg-great-blue-700 leading-tight text-hazy-sky-50 bg-hazy-sky-900 border border-hazy-sky-400">
+              {{page}}
+            </button>
+          </li>
+        }
+        <li>
+          <button href="#"
+          (click)="onPageChange(currentPage() + 1)"
+          class="flex items-center justify-center px-3 h-8 leading-tight hover:bg-great-blue-700 text-hazy-sky-50 bg-purple-heart-900 border border-hazy-sky-400 rounded-e-lg">
+            <span class="sr-only">Next</span>
+            <svg class="w-2.5 h-2.5 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
+            </svg>
+          </button>
+        </li>
+      </ul>
+    </nav>
   </div>
 }
