--- a/src/app/features/prestamos/seguimiento/pages/seguimiento-prestamos/seguimiento-prestamos.component.html
+++ b/src/app/features/prestamos/seguimiento/pages/seguimiento-prestamos/seguimiento-prestamos.component.html
@@ -6,18 +6,28 @@
   @notLoading
   >
     <div  class="mb-5 text-hazy-sky-900">
-      <h1 class="text-2xl mb-4 font-semibold text-hazy-sky-800 ">Seguimiento de prestamos.</h1>
+      <h1 class="text-2xl mb-4 font-semibold text-hazy-sky-800 ">Seguimiento de Prestamos Regulares</h1>
+    </div>
+    <div class="flex flex-row mb-4 w-full justify-between">
+      <div class="relative mt-1 flex gap-5">
+        <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none" >
+          <svg class="w-4 h-4 " aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
+          </svg>
+        </div>
+          <input 
+          class="bg-blue-sky text-hazy-sky-800 focus:outline-none border-2 border-hazy-sky-200 text-sm rounded-lg p-2 ps-10 focus:border-hazy-sky-700"
+          [ngClass]="{'w-80': !isMobile(), 'w-40': isMobile()}"
+          placeholder="Buscar" 
+          #searchQuery
+           (input)="onSearchUpdated(searchQuery.value)"
+          >
+      </div>
     </div>
     <div class="relative overflow-x-auto shadow-md rounded-md">
       <table class="w-full text-sm text-left">
           <thead class="text-sm uppercase">
             <tr class="bg-hazy-sky-900 text-hazy-sky-50">
-              <th class="p-4">
-                <div class="flex items-center">
-                  <input id="checkbox-all-search" type="checkbox" class="w-4 h-4 text-hazy-sky-400 rounded focus:ring-hazy-sky-500 focus:ring-2">
-                  <label for="checkbox-all-search" class="sr-only">checkbox</label>
-                </div>
-              </th>
               <th class="px-6 py-3">
                   Id DICI
               </th>
@@ -40,13 +50,7 @@
           </thead>
           <tbody>
             @for(prestamosRegular of prestamosRegular(); track prestamosRegular.id_dici){
-              <tr class=" border-t  border-hazy-sky-700 text-black">
-                <td class="w-4 p-4">
-                  <div class="flex items-center">
-                    <input id="checkbox-all-search" type="checkbox" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-                    <label for="checkbox-all-search" class="sr-only">checkbox</label>
-                  </div>
-                </td>
+              <tr class=" border-t  border-hazy-sky-700 text-black odd:bg-hazy-sky-50 even:bg-hazy-sky-100">
                 <td class="px-6 py-4 font-medium ">
                   {{prestamosRegular.id_dici}}
                 </td>
@@ -68,9 +72,50 @@
                   </button>
                 </td>
               </tr>
+            }@empty {
+              <tr class="border-t border-hazy-sky-700">
+                <td class="px-6 py-4 text-center font-medium text-lg text-hazy-sky-900" colspan="6">
+                  No hay datos disponibles
+                </td>
+              </tr>
             }
           </tbody>
       </table>
     </div>
+    @if(prestamosRegular().length > 0){
+      <nav class="mt-3 flex items-end justify-center">
+        <ul class="flex items-center -space-x-px h-8 ">
+          <li>
+            <button href="#"
+            (click)="onPageChange(currentPage() - 1)"
+             class="flex items-center justify-center px-3 h-8 ms-0 leading-tight hover:bg-great-blue-700 text-hazy-sky-50 bg-hazy-sky-900 border border-e-0 border-gray-300 rounded-s-lg hover:bg-gray-100">
+              <span class="sr-only">Previous</span>
+              <svg class="w-2.5 h-2.5 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 1 1 5l4 4"/>
+              </svg>
+            </button>
+          </li>
+          @for(page of totalPages; track $index) {
+            <li>
+              <button 
+              (click)="onPageChange(page)"
+              class="flex items-center justify-center px-3 h-8 hover:bg-great-blue-700 leading-tight text-hazy-sky-50 bg-hazy-sky-900 border border-hazy-sky-400">
+                {{page}}
+              </button>
+            </li>
+          }
+          <li>
+            <button href="#"
+            (click)="onPageChange(currentPage() + 1)"
+            class="flex items-center justify-center px-3 h-8 leading-tight hover:bg-great-blue-700 text-hazy-sky-50 bg-purple-heart-900 border border-hazy-sky-400 rounded-e-lg">
+              <span class="sr-only">Next</span>
+              <svg class="w-2.5 h-2.5 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
+              </svg>
+            </button>
+          </li>
+        </ul>
+      </nav>
+    }
   </div>
 }
