--- a/src/app/features/usuarios/pages/crear-usuario/crear-usuario.component.html
+++ b/src/app/features/usuarios/pages/crear-usuario/crear-usuario.component.html
@@ -1,3 +1,5 @@
+<div
+@notLoading>
 <div>
   <h1 class="text-2xl mb-6 font-semibold text-hazy-sky-800 ">Crear Usuario</h1>
 </div>
@@ -40,7 +42,7 @@
   </div>
 </form>
 <div class="flex justify-end gap-5 font-medium">
-  <button class="bg-hazy-sky-200 p-2 px-3 rounded-md text-hazy-sky-950 hover:bg-great-blue-100 transition">Cancelar</button>
+  <button (click)="cancelar()" class="bg-hazy-sky-200 p-2 px-3 rounded-md text-hazy-sky-950 hover:bg-great-blue-100 transition">Cancelar</button>
   <button (click)="crearUsuario()" class="bg-hazy-sky-200 flex items-center justify-center p-2 px-3 rounded-md text-hazy-sky-950 hover:bg-great-blue-100 transition">
     @if(loadingCrearUsuario()){
       <svg aria-hidden="true" class="w-5 h-5 animate-spin text-white fill-hazy-sky-900 " viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -51,4 +53,6 @@
     <span class="pl-2">Crear Usuario</span>
   </button>
 </div>
+</div>
+
 
