--- a/src/app/features/usuarios/pages/gestion-usuarios/gestion-usuarios.component.html
+++ b/src/app/features/usuarios/pages/gestion-usuarios/gestion-usuarios.component.html
@@ -8,8 +8,20 @@
     <h1 class="text-2xl mb-4 font-semibold text-hazy-sky-800 ">Gestion de Usuarios</h1>
   </div>
   <div class="flex flex-row mb-4 w-full justify-between">
-    <input class="bg-blue-sky max-w-44 text-hazy-sky-800 focus:outline-none border rounded-lg p-2 focus:border-hazy-sky-600"
-    placeholder="Buscar ">
+    <div class="relative mt-1 flex gap-5">
+      <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none" >
+        <svg class="w-4 h-4 " aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
+        </svg>
+      </div>
+        <input 
+        class="bg-blue-sky text-hazy-sky-800 focus:outline-none border-2 border-hazy-sky-200 text-sm rounded-lg p-2 ps-10 focus:border-hazy-sky-700"
+        [ngClass]="{'w-80': !isMobile(), 'w-40': isMobile()}"
+        placeholder="Buscar" 
+        #searchQuery
+         (input)="onSearchUpdated(searchQuery.value)"
+        >
+    </div>
     <button (click)="crearUsuario()" 
     class="bg-hazy-sky-200 p-2 px-5 rounded-md text-hazy-sky-950 font-medium hover:bg-great-blue-100 transition">
       Crear Usuario
@@ -19,12 +31,6 @@
     <table class="w-full text-sm text-left">
         <thead class="text-sm uppercase">
           <tr class="bg-hazy-sky-900 text-hazy-sky-50">
-            <th class="p-4">
-              <div class="flex items-center">
-                <input id="checkbox-all-search" type="checkbox" class="w-4 h-4 text-hazy-sky-400 rounded focus:ring-hazy-sky-500 focus:ring-2">
-                <label for="checkbox-all-search" class="sr-only">checkbox</label>
-              </div>
-            </th>
             <th class="px-6 py-3">
               ID usuario
             </th>
@@ -47,13 +53,7 @@
         </thead>
         <tbody>
           @for(usuario of usuarios(); track usuario.id_usuario){
-            <tr class=" border-t  border-hazy-sky-700 text-black">
-              <td class="w-4 p-4">
-                <div class="flex items-center">
-                  <input id="checkbox-all-search" type="checkbox" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-                  <label for="checkbox-all-search" class="sr-only">checkbox</label>
-                </div>
-              </td>
+            <tr class=" border-t  border-hazy-sky-700 text-black odd:bg-hazy-sky-50 even:bg-hazy-sky-100">
               <td class="px-6 py-4 font-medium ">
                 {{usuario.id_usuario}}
               </td>
@@ -70,12 +70,6 @@
                 {{usuario.rol}}
               </td>
               <td class="px-6 w-1/5 whitespace-nowrap">
-                <button (click)="verUsuario()" class="p-1 mr-2 hover:bg-hazy-sky-100 rounded-xl transition">
-                  <svg class="w-6 h-6 text-hazy-sky-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                    <path stroke="currentColor" stroke-width="2" d="M21 12c0 1.2-4.03 6-9 6s-9-4.8-9-6c0-1.2 4.03-6 9-6s9 4.8 9 6Z"/>
-                    <path stroke="currentColor" stroke-width="2" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"/>
-                  </svg>                              
-                </button>
                 <button (click)="editarUsuario(usuario.id_usuario)" class="p-1 mr-2 hover:bg-yellow-100 rounded-xl transition">
                   <svg class="w-6 h-6 text-yellow-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m14.304 4.844 2.852 2.852M7 7H4a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h11a1 1 0 0 0 1-1v-4.5m2.409-9.91a2.017 2.017 0 0 1 0 2.853l-6.844 6.844L8 14l.713-3.565 6.844-6.844a2.015 2.015 0 0 1 2.852 0Z"/>
@@ -92,5 +86,38 @@
         </tbody>
     </table>
   </div>
+  <nav class="mt-3 flex items-end justify-center">
+    <ul class="flex items-center -space-x-px h-8 ">
+      <li>
+        <button href="#"
+        (click)="onPageChange(currentPage() - 1)"
+         class="flex items-center justify-center px-3 h-8 ms-0 leading-tight hover:bg-great-blue-700 text-hazy-sky-50 bg-hazy-sky-900 border border-e-0 border-gray-300 rounded-s-lg hover:bg-gray-100">
+          <span class="sr-only">Previous</span>
+          <svg class="w-2.5 h-2.5 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 1 1 5l4 4"/>
+          </svg>
+        </button>
+      </li>
+      @for(page of totalPages; track $index) {
+        <li>
+          <button 
+          (click)="onPageChange(page)"
+          class="flex items-center justify-center px-3 h-8 hover:bg-great-blue-700 leading-tight text-hazy-sky-50 bg-hazy-sky-900 border border-hazy-sky-400">
+            {{page}}
+          </button>
+        </li>
+      }
+      <li>
+        <button href="#"
+        (click)="onPageChange(currentPage() + 1)"
+        class="flex items-center justify-center px-3 h-8 leading-tight hover:bg-great-blue-700 text-hazy-sky-50 bg-purple-heart-900 border border-hazy-sky-400 rounded-e-lg">
+          <span class="sr-only">Next</span>
+          <svg class="w-2.5 h-2.5 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
+          </svg>
+        </button>
+      </li>
+    </ul>
+  </nav>
 </div>
 }
