--- a/src/app/core/auth/pages/login/login.component.html
+++ b/src/app/core/auth/pages/login/login.component.html
@@ -4,7 +4,7 @@
     <div class="h-full w-full flex rounded-xl overflow-hidden shadow-lg">
       <div class="bg-great-blue-900 h-full w-7/12 text-hazy-sky-50 p-10 xl:p-20 flex flex-col justify-center gap-10">
         <div class="text-center">
-          <div class="text-3xl mb-2">Bievenido al Sistema de Laboratorio del</div>
+          <div class="text-3xl mb-2">Bienvenido al Sistema de Laboratorio del</div>
           <div class="text-4xl font-extrabold">Departamento en Computación e Informática</div>
         </div>
         <div class="h-24 w-full relative">
