--- a/src/app/features/prestamos/regular/pages/confirmar-prestamo/confirmar-prestamo.component.html
+++ b/src/app/features/prestamos/regular/pages/confirmar-prestamo/confirmar-prestamo.component.html
@@ -12,10 +12,10 @@
         <h2 class="text-3xl font-bold text-center mb-4">Recurso</h2>
         <div class="p-5 text-xl flex flex-col gap-4">
           <div>
-            <span class="font-semibold">id_dici:</span><span class="ml-3">{{recurso()?.id_dici}}</span>
+            <span class="font-semibold">ID DICI:</span><span class="ml-3">{{recurso()?.id_dici}}</span>
           </div>
           <div>
-            <span class="font-semibold">id_uta:</span><span class="ml-3">{{recurso()?.id_uta}}</span>
+            <span class="font-semibold">ID UTA:</span><span class="ml-3">{{recurso()?.id_uta}}</span>
           </div>
           <div>
             <span class="font-semibold">Nombre:</span><span class="ml-3">{{recurso()?.nombre}}</span>
@@ -24,7 +24,7 @@
             <span class="font-semibold">Modelo:</span><span class="ml-3">{{recurso()?.modelo}}</span>
           </div>
           <div>
-            <span class="font-semibold">Ubicacion:</span><span class="ml-3">{{recurso()?.ubicacion}}</span>
+            <span class="font-semibold">Ubicación:</span><span class="ml-3">{{recurso()?.ubicacion}}</span>
           </div>
         </div>
       </div>
@@ -34,16 +34,16 @@
         <h2 class="text-3xl font-bold text-center mb-4">Estudiante</h2>
         <div class="p-5 text-xl flex flex-col gap-4">
           <div>
-            <span class="font-semibold">Rut:</span><span class="ml-3">{{estudiante()?.rut}}</span>
+            <span class="font-semibold">RUT:</span><span class="ml-3">{{estudiante()?.rut}}</span>
           </div>
           <div>
             <span class="font-semibold">Nombre:</span><span class="ml-3">{{estudiante()?.nombre}}</span>
           </div>
           <div>
-            <span class="font-semibold">Año:</span><span class="ml-3">{{estudiante()?.ingreso}}</span>
+            <span class="font-semibold">Año de Ingreso:</span><span class="ml-3">{{estudiante()?.ingreso}}</span>
           </div>
           <div>
-            <span class="font-semibold">Fono:</span><span class="ml-3">{{estudiante()?.fono}}</span>
+            <span class="font-semibold">Teléfono:</span><span class="ml-3">{{estudiante()?.fono}}</span>
           </div>
         </div>
       </div>
