--- a/src/app/features/prestamos/regular/pages/seleccionar-categoria/seleccionar-categoria.component.html
+++ b/src/app/features/prestamos/regular/pages/seleccionar-categoria/seleccionar-categoria.component.html
@@ -10,7 +10,7 @@
   <div
   @fadeInDiagonal>
     <div  class="mb-5 text-hazy-sky-900">
-      <h1 class="text-2xl mb-4 font-semibold text-hazy-sky-800 ">Seleccione una categoria</h1>
+      <h1 class="text-2xl mb-4 font-semibold text-hazy-sky-800 ">Seleccione una categoría</h1>
     </div>
     <div  class="grid gap-4"
     [class]="isMobile()? 'grid-cols-1 sm:grid-cols-2' : 'grid-cols-2 lg:grid-cols-2 xl:grid-cols-3 2xl:grid-cols-4'"
