--- a/src/app/features/usuarios/pages/gestion-usuarios/gestion-usuarios.component.html
+++ b/src/app/features/usuarios/pages/gestion-usuarios/gestion-usuarios.component.html
@@ -5,7 +5,7 @@
 @notLoading
 >
   <div>
-    <h1 class="text-2xl mb-4 font-semibold text-hazy-sky-800 ">Gestion de Usuarios</h1>
+    <h1 class="text-2xl mb-4 font-semibold text-hazy-sky-800 ">Gestión de Usuarios</h1>
   </div>
   <div class="flex flex-row mb-4 w-full justify-between">
     <div class="relative mt-1 flex gap-5">
