--- a/src/app/features/estudiantes/pages/gestion-estudiantes/gestion-estudiantes.component.html
+++ b/src/app/features/estudiantes/pages/gestion-estudiantes/gestion-estudiantes.component.html
@@ -5,7 +5,7 @@
 @notLoading
 >
   <div>
-    <h1 class="text-2xl mb-4 font-semibold text-hazy-sky-800 ">Gestion de Estudiantes</h1>
+    <h1 class="text-2xl mb-4 font-semibold text-hazy-sky-800 ">Gestión de Estudiantes</h1>
   </div>
   <div class="flex flex-wrap my-4 w-full justify-between">
     <div class="relative mt-1">
