--- a/src/app/features/inventario/categorias/pages/gestion-categorias/gestion-categorias.component.html
+++ b/src/app/features/inventario/categorias/pages/gestion-categorias/gestion-categorias.component.html
@@ -6,7 +6,7 @@
   @notLoading
   >
     <div>
-      <h1 class="text-2xl mb-4 font-semibold text-hazy-sky-800 ">Gestion de categorias</h1>
+      <h1 class="text-2xl mb-4 font-semibold text-hazy-sky-800 ">Gestión de categorias</h1>
     </div>
     <div class="flex flex-row mb-4 w-full justify-between">
       <div class="relative mt-1 flex gap-5">
