ultimos si que si

--- a/src/app/features/prestamos/regular/pages/seleccionar-recurso/seleccionar-recurso.component.html
+++ b/src/app/features/prestamos/regular/pages/seleccionar-recurso/seleccionar-recurso.component.html
@@ -42,7 +42,7 @@
                 Estado
               </th>
               <th class="px-6 py-3">
-                  Descripcion
+                  Ubicación
               </th>
               <th class="px-6 py-3">
                   Acciones
@@ -67,7 +67,7 @@
                   </td>
                   <td class="px-6 py-4">
                     <div class="flex w-80">
-                      {{recurso.descripcion}}
+                      {{recurso.ubicacion}}
                     </div>
                   </td>
                   <td class="px-6 w-1/5 whitespace-nowrap">
