--- a/src/app/features/usuarios/pages/editar-usuario/editar-usuario.component.html
+++ b/src/app/features/usuarios/pages/editar-usuario/editar-usuario.component.html
@@ -5,7 +5,7 @@
   @notLoading
   >
     <div>
-      <h1 class="text-2xl mb-6 font-semibold text-hazy-sky-800 ">Crear Usuario</h1>
+      <h1 class="text-2xl mb-6 font-semibold text-hazy-sky-800 ">Editar Usuario</h1>
     </div>
     <form [formGroup]="fromEditarUsuario" class="grid gap-x-4 gap-y-2 mb-8"
     [class]="isMobile()?'grid-cols-1':'grid-cols-3'"
